Remove breaks in title

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -2,7 +2,7 @@ project:
   type: website
 
 website:
-  title: "Good<br>Enough<br>Computing<br>in Science<br>👍⚖️🧑‍💻🧪"
+  title: "Good Enough Computing in Science 👍⚖️🧑‍💻🧪"
   # navbar: true
     # left:
       # - href: index.qmd
