Add VS Code link to sidebar

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -20,6 +20,8 @@ website:
         href: 00_setting_up.qmd
       - text: "1. Terminal"
         href: 01_terminal.qmd
+      - text: "VS Code"
+        href: 00_vscode.qmd
       # - text: "About"
       #   href: about.qmd
       # -  auto: 0?_*
