Correct the filename

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -21,7 +21,7 @@ website:
       - text: "1. Terminal"
         href: 01_terminal.qmd
       - text: "VS Code"
-        href: 00_vscode.qmd
+        href: 00_vs_code.qmd
       # - text: "About"
       #   href: about.qmd
       # -  auto: 0?_*
