Add project structure tutorial to sidebar

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -20,6 +20,8 @@ website:
         href: 00_setting_up.qmd
       - text: "1. Terminal"
         href: 01_terminal.qmd
+      - text: "2. Project Structure"
+        href: 02_project_structure.qmd
       - text: "VS Code"
         href: 00_vs_code.qmd
       # - text: "About"
